--- a/config.local.json
+++ b/config.local.json
@@ -1,5 +1,5 @@
 {
-  "mongo_uri": "mongodb://localhost:27017/",
+  "mongo_uri": "mongodb://0.0.0.0:27017/",
   "mongo_db": "shield",
   "log_level": "debug"
 }
