--- a/config.local.json
+++ b/config.local.json
@@ -1,5 +1,7 @@
 {
   "mongo_uri": "mongodb://0.0.0.0:27017/",
   "mongo_db": "shield",
-  "log_level": "debug"
+  "log_level": "debug",
+  "log_dir": "logs",
+  "save_logs": false
 }
