--- a/config.sample.json
+++ b/config.sample.json
@@ -1,6 +1,8 @@
 {
   "cluster": "acc",
-  "mongo_uri": "mongodb+srv://<user>:<password>@<host>/",
+  "mongo_uri": "mongodb://0.0.0.0:27017/",
   "mongo_db": "shield",
-  "log_level": "info"
+  "log_level": "debug",
+  "log_dir": "logs",
+  "save_logs": false
 }
