--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,10 +1,11 @@
-name: Lint Python with Ruff
+name: Lint Go
 
 on:
   pull_request:
     paths:
-      - "**.py"
-      - "requirements.txt"
+      - '**.go'
+      - 'go.mod'
+      - 'go.sum'
 
 jobs:
   lint:
@@ -12,11 +13,15 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - name: Set up Go
+        uses: actions/setup-go@v5
         with:
-          python-version: "3.13"
-      - name: Install Ruff
-        run: pip install ruff
-      - name: Run Ruff
-        run: ruff check .
+          go-version: '1.21'
+      - name: Run go fmt
+        run: go fmt ./...
+      - name: Run go vet
+        run: go vet ./...
+      - name: Run golangci-lint
+        uses: golangci/golangci-lint-action@v4
+        with:
+          version: latest
